Add Sign In button to sign in page
Added a Sign In button to the authentication box.

--- a/my frontend/sign in.html
+++ b/my frontend/sign in.html
@@ -23,6 +23,14 @@
       <button class="role-btn" onclick="selectRole('Employee', this)">Employee</button>
       <button class="role-btn" onclick="selectRole('HR', this)">HR</button>
     </div>
+    <button class="btn btn-primary w-100 mt-2" onclick="signIn()">
+      Sign In
+    </button>
+
+    <p class="text-center mt-3">
+      Don’t have an account?
+      <a href="signup.html">Sign Up</a>
+    </p>
 
     <p class="text-center mt-3">
       Don’t have an account?
@@ -34,3 +42,4 @@
 <script src="js/auth.js"></script>
 </body>
 </html>
+
