--- a/my frontend/sign up.html
+++ b/my frontend/sign up.html
@@ -42,6 +42,15 @@
       <button class="role-btn" onclick="selectRole('Employee', this)">Employee</button>
       <button class="role-btn" onclick="selectRole('HR', this)">HR / Admin</button>
     </div>
+    <button class="btn btn-primary w-100 mt-2" onclick="signUp()">
+      Sign Up
+    </button>
+
+    <p class="text-center mt-3">
+      Already have an account?
+      <a href="index.html">Sign In</a>
+    </p>
+  
 
     <p class="text-center mt-3">
       Already have an account?
@@ -53,3 +62,4 @@
 <script src="js/auth.js"></script>
 </body>
 </html>
+
