Fix HTML structure and remove duplicate elements

--- a/my frontend/sign up.html
+++ b/my frontend/sign up.html
@@ -11,7 +11,7 @@
   <div class="auth-box large">
     <h4 class="text-center">Sign Up</h4>
 
-    <label class="mb-1">Company Name</label>
+    <label class="mb-1"></label>
     <div class="d-flex gap-2 mb-3">
       <input id="company" class="form-control" placeholder="Company Name">
       <label class="upload-icon">
@@ -57,5 +57,6 @@
 <script src="js/auth.js"></script>
 </body>
 </html>
+
 
 
