--- a/my frontend/My Profile for Admin.html
+++ b/my frontend/My Profile for Admin.html
@@ -69,9 +69,12 @@ label{
 <nav class="navbar navbar-expand-lg px-4">
     <a class="navbar-brand text-white">Company Logo</a>
     <div class="navbar-nav">
-        <a class="nav-link">Employees</a>
-        <a class="nav-link">Attendance</a>
-        <a class="nav-link">Time Off</a>
+        <a class="nav-link" href="After Sign in.html">Employees</a>
+        <a class="nav-link" href="#" onclick="navigateToAttendance()">Attendance</a>
+        <a class="nav-link" href="Timeoff.html">Time Off</a>
+    </div>
+    <div class="ms-auto">
+        <button class="btn btn-outline-light btn-sm" onclick="logout()">Logout</button>
     </div>
 </nav>
 
@@ -290,6 +293,7 @@ label{
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="navigation.js"></script>
 
 <script>
 const isAdmin = true; // false = hide salary tab
