--- a/my frontend/Timeoff.html
+++ b/my frontend/Timeoff.html
@@ -11,19 +11,24 @@
 
 <body class="bg-dark text-light">
 
-<div class="container mt-4">
-
-  <!-- TOP NAV -->
-  <ul class="nav nav-tabs mb-3">
-    <li class="nav-item"><span class="nav-link">Employees</span></li>
-    <li class="nav-item"><span class="nav-link">Attendance</span></li>
-    <li class="nav-item"><span class="nav-link active">Time Off</span></li>
+<!-- NAVBAR -->
+<nav class="navbar navbar-dark bg-dark px-4">
+  <span class="navbar-brand">Company Logo</span>
+  <ul class="nav">
+    <li class="nav-item"><a class="nav-link text-light" href="After Sign in.html">Employees</a></li>
+    <li class="nav-item"><a class="nav-link text-light" href="#" onclick="navigateToAttendance()">Attendance</a></li>
+    <li class="nav-item"><a class="nav-link text-light active">Time Off</a></li>
   </ul>
+  <div class="ms-auto">
+    <button class="btn btn-outline-light btn-sm" onclick="logout()">Logout</button>
+  </div>
+</nav>
+
+<div class="container mt-4">
 
   <!-- SUB NAV -->
   <div class="d-flex align-items-center mb-3">
-    <button class="btn btn-secondary me-2">Time Off</button>
-    <button class="btn btn-outline-secondary">Allocation</button>
+    <span class="text-light me-3">Time Off Management</span>
     <button class="btn btn-primary ms-3" data-bs-toggle="collapse" data-bs-target="#formBox">
       NEW
     </button>
@@ -90,7 +95,60 @@
 
 </div>
 
-<script src="script.js"></script>
+<script>
+function addLeave() {
+  const empName = document.getElementById("empName").value;
+  const startDate = document.getElementById("startDate").value;
+  const endDate = document.getElementById("endDate").value;
+  const leaveType = document.getElementById("leaveType").value;
+
+  if (!empName || !startDate || !endDate || !leaveType) {
+    alert("Please fill all fields");
+    return;
+  }
+
+  const table = document.getElementById("leaveTable");
+  const row = table.insertRow();
+  
+  row.innerHTML = `
+    <td>${empName}</td>
+    <td>${startDate}</td>
+    <td>${endDate}</td>
+    <td>${leaveType}</td>
+    <td><span class="badge bg-warning">Pending</span></td>
+    <td>
+      <button class="btn btn-success btn-sm me-1" onclick="approveLeave(this)">Approve</button>
+      <button class="btn btn-danger btn-sm" onclick="rejectLeave(this)">Reject</button>
+    </td>
+  `;
+
+  // Clear form
+  document.getElementById("empName").value = "";
+  document.getElementById("startDate").value = "";
+  document.getElementById("endDate").value = "";
+  document.getElementById("leaveType").value = "";
+  
+  // Collapse form
+  const formBox = document.getElementById("formBox");
+  const collapse = new bootstrap.Collapse(formBox);
+  collapse.hide();
+}
+
+function approveLeave(btn) {
+  const row = btn.closest('tr');
+  const statusCell = row.cells[4];
+  statusCell.innerHTML = '<span class="badge bg-success">Approved</span>';
+  btn.parentElement.innerHTML = '<span class="text-success">Approved</span>';
+}
+
+function rejectLeave(btn) {
+  const row = btn.closest('tr');
+  const statusCell = row.cells[4];
+  statusCell.innerHTML = '<span class="badge bg-danger">Rejected</span>';
+  btn.parentElement.innerHTML = '<span class="text-danger">Rejected</span>';
+}
+</script>
+<script src="navigation.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
