--- a/my frontend/sign in.html
+++ b/my frontend/sign in.html
@@ -3,7 +3,7 @@
 <head>
   <title>HRMS | Sign In</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -29,12 +29,12 @@
 
     <p class="text-center mt-3">
       Don’t have an account?
-      <a href="signup.html">Sign Up</a>
+      <a href="sign up.html">Sign Up</a>
     </p>
   </div>
 </div>
 
-<script src="js/auth.js"></script>
+<script src="auth.js"></script>
 </body>
 </html>
 
