--- a/my frontend/sign up.html
+++ b/my frontend/sign up.html
@@ -3,7 +3,7 @@
 <head>
   <title>HRMS | Sign Up</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -49,12 +49,12 @@
 
     <p class="text-center mt-3">
       Already have an account?
-      <a href="index.html">Sign In</a>
+      <a href="sign in.html">Sign In</a>
     </p>
   </div>
 </div>
 
-<script src="js/auth.js"></script>
+<script src="auth.js"></script>
 </body>
 </html>
 
